// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImpactCertificate RTL (Arabic locale) matches snapshot under RTL 1`] = `
<div>
  <div
    class="bg-white border border-forest-200 rounded-3xl overflow-hidden shadow-lg"
    id="impact-certificate"
  >
    <div
      class="bg-gradient-to-r from-forest-900 to-forest-800 text-white px-8 py-8"
    >
      <div
        class="flex items-center justify-between gap-6"
      >
        <div>
          <p
            class="text-xs tracking-[0.22em] uppercase text-forest-100 font-body"
          >
            Stellar GreenPay
          </p>
          <h2
            class="font-display text-3xl font-bold leading-tight"
          >
            Impact Certificate
          </h2>
          <p
            class="text-forest-100 text-sm mt-2 font-body"
          >
            On-chain donations, shown beside separately evidenced project outcomes.
          </p>
        </div>
        <div
          class="text-5xl"
        >
          🌿
        </div>
      </div>
    </div>
    <div
      class="px-8 py-8"
    >
      <div
        class="text-center mb-8"
      >
        <p
          class="text-sm text-[#4b654b] font-body"
        >
          Presented to
        </p>
        <p
          class="font-display text-3xl font-bold text-forest-900 mt-2"
        >
          Jane Doe
        </p>
        <p
          class="text-xs text-[#547454] mt-2 font-body"
        >
          Donor Address: 
          GABCDEFGHI...KLMNOPQRST
        </p>
      </div>
      <div
        class="grid grid-cols-1 sm:grid-cols-3 gap-4 mb-8"
      >
        <div
          class="card text-center border-forest-100/50"
        >
          <p
            class="text-2xl mb-2"
          >
            💚
          </p>
          <p
            class="font-display font-bold text-forest-900 text-lg"
          >
            ١٬٥٠٠ XLM
          </p>
          <p
            class="text-xs text-[#547454] mt-1 font-body uppercase tracking-wider font-bold opacity-60"
          >
            Total Donated
          </p>
        </div>
        <div
          class="card text-center border-forest-100/50"
        >
          <p
            class="text-2xl mb-2"
          >
            📋
          </p>
          <p
            class="font-display font-bold text-forest-900 text-lg"
          >
            1
          </p>
          <p
            class="text-xs text-[#547454] mt-1 font-body uppercase tracking-wider font-bold opacity-60"
          >
            Project Outcome Claims
          </p>
        </div>
        <div
          class="card text-center border-forest-100/50"
        >
          <p
            class="text-2xl mb-2"
          >
            🌲
          </p>
          <p
            class="font-display font-bold text-forest-900 text-lg"
          >
            Forest
          </p>
          <p
            class="text-xs text-[#547454] mt-1 font-body uppercase tracking-wider font-bold opacity-60"
          >
            Badge Tier
          </p>
        </div>
      </div>
      <div
        class="mb-8 rounded-2xl border border-amber-200 bg-amber-50 p-4 text-sm text-amber-950"
      >
        <p
          class="font-bold"
        >
          No donor-level outcome attribution
        </p>
        <p
          class="mt-1"
        >
          Project-level outcomes are not allocated to this donor.
        </p>
      </div>
      <div
        class="mb-8"
      >
        <h3
          class="font-display font-bold text-forest-900 mb-3"
        >
          Current project outcome records
        </h3>
        <div
          class="space-y-3"
        >
          <article
            class="rounded-2xl border p-5 border-forest-100 bg-white"
          >
            <div
              class="flex flex-wrap items-start justify-between gap-3"
            >
              <div>
                <p
                  class="text-xs font-bold uppercase tracking-wider text-forest-500"
                >
                  Sequestration
                </p>
                <p
                  class="mt-1 font-display text-xl font-bold text-forest-900"
                >
                  ٨٠–١٣٠ kg CO₂e
                </p>
                <p
                  class="mt-1 text-xs text-forest-600"
                >
                  90
                  % confidence range
                </p>
              </div>
              <span
                class="inline-flex items-center rounded-full border px-2.5 py-1 text-[11px] font-bold border-amber-300 bg-amber-50 text-amber-900"
              >
                Operator-stated
              </span>
            </div>
            <dl
              class="mt-4 grid gap-3 text-sm grid-cols-1"
            >
              <div>
                <dt
                  class="text-xs font-bold uppercase tracking-wide text-forest-500"
                >
                  Methodology
                </dt>
                <dd
                  class="mt-1 text-forest-900"
                >
                  Forest plots v1.0
                </dd>
              </div>
              <div>
                <dt
                  class="text-xs font-bold uppercase tracking-wide text-forest-500"
                >
                  Measured
                </dt>
                <dd
                  class="mt-1 text-forest-900"
                >
                  2025-01-01 — 2025-12-31
                </dd>
              </div>
            </dl>
            <div
              class="mt-4 border-t border-forest-100 pt-3 text-xs text-forest-600"
            >
              <p
                class="font-mono break-all"
              >
                Claim 11111111-1111-4111-8111-111111111111
              </p>
              <p
                class="mt-1"
              >
                No independent on-chain attestation is recorded.
              </p>
              <a
                class="mt-2 inline-block font-bold text-forest-700 underline underline-offset-2"
                href="/api/v1/impact/claims/11111111-1111-4111-8111-111111111111/verification"
              >
                Verify current claim and revocation status
              </a>
            </div>
          </article>
        </div>
      </div>
      <div
        class="rounded-2xl border border-forest-100 bg-forest-50 p-5"
      >
        <h3
          class="font-display font-bold text-forest-900 mb-2"
        >
          Projects Supported
        </h3>
        <ul
          class="text-sm text-forest-900 font-body grid grid-cols-1 sm:grid-cols-2 gap-x-6 gap-y-1"
        >
          <li
            class="flex items-center gap-2"
          >
            <span
              class="text-forest-600"
            >
              •
            </span>
            <span
              class="font-semibold"
            >
              Amazon Reforestation
            </span>
          </li>
          <li
            class="flex items-center gap-2"
          >
            <span
              class="text-forest-600"
            >
              •
            </span>
            <span
              class="font-semibold"
            >
              Solar for Schools
            </span>
          </li>
        </ul>
      </div>
      <div
        class="flex flex-col sm:flex-row sm:items-center sm:justify-between gap-2 mt-8 pt-6 border-t border-forest-100"
      >
        <p
          class="text-xs text-[#547454] font-body"
        >
          Issued on 
          Jan 15, 2026
        </p>
        <p
          class="text-xs text-[#547454] font-body"
        >
          Donation history is on-chain. Each outcome claim carries its own current provenance.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`ImpactCertificate matches snapshot 1`] = `
<div>
  <div
    class="bg-white border border-forest-200 rounded-3xl overflow-hidden shadow-lg"
    id="impact-certificate"
  >
    <div
      class="bg-gradient-to-r from-forest-900 to-forest-800 text-white px-8 py-8"
    >
      <div
        class="flex items-center justify-between gap-6"
      >
        <div>
          <p
            class="text-xs tracking-[0.22em] uppercase text-forest-100 font-body"
          >
            Stellar GreenPay
          </p>
          <h2
            class="font-display text-3xl font-bold leading-tight"
          >
            Impact Certificate
          </h2>
          <p
            class="text-forest-100 text-sm mt-2 font-body"
          >
            On-chain donations, shown beside separately evidenced project outcomes.
          </p>
        </div>
        <div
          class="text-5xl"
        >
          🌿
        </div>
      </div>
    </div>
    <div
      class="px-8 py-8"
    >
      <div
        class="text-center mb-8"
      >
        <p
          class="text-sm text-[#4b654b] font-body"
        >
          Presented to
        </p>
        <p
          class="font-display text-3xl font-bold text-forest-900 mt-2"
        >
          Jane Doe
        </p>
        <p
          class="text-xs text-[#547454] mt-2 font-body"
        >
          Donor Address: 
          GABCDEFGHI...KLMNOPQRST
        </p>
      </div>
      <div
        class="grid grid-cols-1 sm:grid-cols-3 gap-4 mb-8"
      >
        <div
          class="card text-center border-forest-100/50"
        >
          <p
            class="text-2xl mb-2"
          >
            💚
          </p>
          <p
            class="font-display font-bold text-forest-900 text-lg"
          >
            1,500 XLM
          </p>
          <p
            class="text-xs text-[#547454] mt-1 font-body uppercase tracking-wider font-bold opacity-60"
          >
            Total Donated
          </p>
        </div>
        <div
          class="card text-center border-forest-100/50"
        >
          <p
            class="text-2xl mb-2"
          >
            📋
          </p>
          <p
            class="font-display font-bold text-forest-900 text-lg"
          >
            1
          </p>
          <p
            class="text-xs text-[#547454] mt-1 font-body uppercase tracking-wider font-bold opacity-60"
          >
            Project Outcome Claims
          </p>
        </div>
        <div
          class="card text-center border-forest-100/50"
        >
          <p
            class="text-2xl mb-2"
          >
            🌲
          </p>
          <p
            class="font-display font-bold text-forest-900 text-lg"
          >
            Forest
          </p>
          <p
            class="text-xs text-[#547454] mt-1 font-body uppercase tracking-wider font-bold opacity-60"
          >
            Badge Tier
          </p>
        </div>
      </div>
      <div
        class="mb-8 rounded-2xl border border-amber-200 bg-amber-50 p-4 text-sm text-amber-950"
      >
        <p
          class="font-bold"
        >
          No donor-level outcome attribution
        </p>
        <p
          class="mt-1"
        >
          Project-level outcomes are not allocated to this donor.
        </p>
      </div>
      <div
        class="mb-8"
      >
        <h3
          class="font-display font-bold text-forest-900 mb-3"
        >
          Current project outcome records
        </h3>
        <div
          class="space-y-3"
        >
          <article
            class="rounded-2xl border p-5 border-forest-100 bg-white"
          >
            <div
              class="flex flex-wrap items-start justify-between gap-3"
            >
              <div>
                <p
                  class="text-xs font-bold uppercase tracking-wider text-forest-500"
                >
                  Sequestration
                </p>
                <p
                  class="mt-1 font-display text-xl font-bold text-forest-900"
                >
                  80–130 kg CO₂e
                </p>
                <p
                  class="mt-1 text-xs text-forest-600"
                >
                  90
                  % confidence range
                </p>
              </div>
              <span
                class="inline-flex items-center rounded-full border px-2.5 py-1 text-[11px] font-bold border-amber-300 bg-amber-50 text-amber-900"
              >
                Operator-stated
              </span>
            </div>
            <dl
              class="mt-4 grid gap-3 text-sm grid-cols-1"
            >
              <div>
                <dt
                  class="text-xs font-bold uppercase tracking-wide text-forest-500"
                >
                  Methodology
                </dt>
                <dd
                  class="mt-1 text-forest-900"
                >
                  Forest plots v1.0
                </dd>
              </div>
              <div>
                <dt
                  class="text-xs font-bold uppercase tracking-wide text-forest-500"
                >
                  Measured
                </dt>
                <dd
                  class="mt-1 text-forest-900"
                >
                  2025-01-01 — 2025-12-31
                </dd>
              </div>
            </dl>
            <div
              class="mt-4 border-t border-forest-100 pt-3 text-xs text-forest-600"
            >
              <p
                class="font-mono break-all"
              >
                Claim 11111111-1111-4111-8111-111111111111
              </p>
              <p
                class="mt-1"
              >
                No independent on-chain attestation is recorded.
              </p>
              <a
                class="mt-2 inline-block font-bold text-forest-700 underline underline-offset-2"
                href="/api/v1/impact/claims/11111111-1111-4111-8111-111111111111/verification"
              >
                Verify current claim and revocation status
              </a>
            </div>
          </article>
        </div>
      </div>
      <div
        class="rounded-2xl border border-forest-100 bg-forest-50 p-5"
      >
        <h3
          class="font-display font-bold text-forest-900 mb-2"
        >
          Projects Supported
        </h3>
        <ul
          class="text-sm text-forest-900 font-body grid grid-cols-1 sm:grid-cols-2 gap-x-6 gap-y-1"
        >
          <li
            class="flex items-center gap-2"
          >
            <span
              class="text-forest-600"
            >
              •
            </span>
            <span
              class="font-semibold"
            >
              Amazon Reforestation
            </span>
          </li>
          <li
            class="flex items-center gap-2"
          >
            <span
              class="text-forest-600"
            >
              •
            </span>
            <span
              class="font-semibold"
            >
              Solar for Schools
            </span>
          </li>
        </ul>
      </div>
      <div
        class="flex flex-col sm:flex-row sm:items-center sm:justify-between gap-2 mt-8 pt-6 border-t border-forest-100"
      >
        <p
          class="text-xs text-[#547454] font-body"
        >
          Issued on 
          Jan 15, 2026
        </p>
        <p
          class="text-xs text-[#547454] font-body"
        >
          Donation history is on-chain. Each outcome claim carries its own current provenance.
        </p>
      </div>
    </div>
  </div>
</div>
`;
